public abstract class Creatures {
}
