public class HumanCreature extends Creatures {
}
