public class HumanToken extends Token{
}
