public class HumanWeapon extends Weapon {
}
