public class MagicToken extends Token{
}
