public class MagicCreature extends Creatures {
}
