public class MagicWeapon extends Weapon {
}
