@startuml
abstract class Weapon {
}
class MagicCreature {
}
class MagicWeapon {
}
class HumanFactory {
+ Weapon weaponBuild()
+ Token tokenBuild()
+ Creatures creatureBuild()
}
class HumanWeapon {
}
class Client {
+ {static} void main(String[])
}
class MagicToken {
}
abstract class Creatures {
}
abstract class AbstractFactory {
+ {abstract}Weapon weaponBuild()
+ {abstract}Token tokenBuild()
+ {abstract}Creatures creatureBuild()
}
class MagicFactory {
+ Weapon weaponBuild()
+ Token tokenBuild()
+ Creatures creatureBuild()
}
abstract class Token {
}
class HumanToken {
}
class HumanCreature {
}


Creatures <|-- MagicCreature
Weapon <|-- MagicWeapon
AbstractFactory <|-- HumanFactory
Weapon <|-- HumanWeapon
Token <|-- MagicToken
AbstractFactory <|-- MagicFactory
Token <|-- HumanToken
Creatures <|-- HumanCreature
@enduml